优化多级表头实现

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,13 +4,10 @@
     "module": "esnext",
     "moduleResolution": "node",
     "outDir": "./dist/types",
-    "lib": ["esnext", "dom", "esnext.asynciterable"],
-    "esModuleInterop": true,
-    "allowSyntheticDefaultImports": true,
+    "lib": ["esnext", "dom"],
     "emitDeclarationOnly": true,
     "sourceMap": true,
     "declaration": true,
-    "jsx": "preserve",
     "experimentalDecorators": true,
     "baseUrl": ".",
     "paths": {
